Fixed dropdown menu and button. It was not responsive, and it was breaking the mobile view.

--- a/styles.css
+++ b/styles.css
@@ -40,9 +40,19 @@ header {
   align-items: center;
   gap: 1em;
 }
+
+header h1 {
+  font-size: 32px;
+  text-align: center;
+}
+
+header h4 {
+  font-size: 14px;
+}
 form {
   width: 90%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
   gap: 1em;
